--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   list-style: none;
   outline: none;
+  box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
 .todo {
@@ -20,9 +22,42 @@ body {
   box-shadow: 10px 10px 10px #eaeaea;
 
   &__sidebar {
-    width: 200px;
+    width: 220px;
     background: #f4f6f8;
     border-right: 1px solid #f1f1f1;
     padding: 58px 20px;
+  }
+
+  &__tasks {
+    flex: 1;
+    padding: 60px;
+    overflow: auto;
+  }
+}
+
+.btn {
+  background: #4dd599;
+  border-radius: 4px;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  &:hover{
+    background: darken(#4dd599, 5%);
+  }
+  &:active{
+    background: darken(#4dd599, 10%);
+  }
+}
+
+.field {
+  background: #ffffff;
+  border: 1px solid #efefef;
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding: 8px 12px;
+  width: 100%;
+  &:focus {
+    border-color: #dbdbdb;
   }
 }
