--- a/src/components/Tasks/Tasks.scss
+++ b/src/components/Tasks/Tasks.scss
@@ -28,6 +28,39 @@
     }
   }
 
+  &__form {
+    margin-top: 20px;
+
+    &-new {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      opacity: 0.4;
+      transition: opacity 0.15s ease-in-out;
+
+      &:hover {
+        opacity: 0.8;
+      }
+
+      img {
+        width: 14px;
+        height: 14px;
+        margin-left: 4px;
+      }
+
+      span {
+        font-size: 16px;
+        margin-left: 15px;
+      }
+    }
+
+    &-block {
+      .btn {
+        margin-right: 10px;
+      }
+    }
+  }
+
   &__items {
     &-row {
       display: flex;
@@ -87,5 +120,13 @@
       background: #f2f2f2;
       border-color: #f2f2f2;
     }
+  }
+
+  h2 {
+    font-size: 23px;
+    font-weight: bold;
+    color: #c9d1d3;
+    text-align: center;
+    margin-top: 100px;
   }
 }
